[project]
name = "comfyui-nano-banana"
version = "1.0.0"
description = "ComfyUI custom nodes for Nano Banana (Gemini) image generation"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.14.0",
    "requests>=2.28.0",
    "Pillow>=9.0.0",
]

[project.urls]
Repository = "https://github.com/fwlemos/NBP-Comfyui"
